--- a/backend/package.json
+++ b/backend/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "typecheck": "tsc --noEmit",
-    "migrate": "ts-node src/scripts/migrate.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@octokit/rest": "^22.0.0",
-    "apollo-server": "^3.13.0",
-    "dotenv": "^17.2.3",
-    "graphql": "^16.11.0",
-    "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "@types/node": "^24.7.0",
-    "@types/pg": "^8.15.5",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"type": "module",
+	"main": "dist/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc",
+		"start": "node dist/index.js",
+		"dev": "tsx watch --clear-screen=false src/index.ts",
+		"typecheck": "tsc --noEmit",
+		"migrate": "tsx src/scripts/migrate.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"@octokit/rest": "^22.0.0",
+		"apollo-server": "^3.13.0",
+		"dotenv": "^17.2.3",
+		"graphql": "^16.11.0",
+		"pg": "^8.16.3"
+	},
+	"devDependencies": {
+		"@types/node": "^24.7.0",
+		"@types/pg": "^8.15.5",
+		"ts-node": "^10.9.2",
+		"ts-node-dev": "^2.0.0",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3"
+	}
 }
