--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@octokit/rest": "^22.0.0",
 		"apollo-server": "^3.13.0",
+		"dataloader": "^2.2.3",
 		"dotenv": "^17.2.3",
 		"graphql": "^16.11.0",
 		"pg": "^8.16.3"
